examples/syntaxErrors/errorParsingPatternDestructor.lcp
A = ()

main : A -> A
main x = ()
main (.head x) = ()
